--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- Favicon  -->
+    <link rel="shortcut icon" href="../src/assets/svgs/logos/EnfinityLogoStd.png" type="image/x-icon">
 
-    
     <title>Enfinity</title>
   
   </head>
